# rosetta

./: .gitignore  README.md
server/: Dockerfile  pyproject.toml
server/data/jvfdtm/xml/: gen_entry.json  gen_trkasi.json  sample_kompletni_zapis.json  sample_kompletni_zapis.xml  sample_trkasi.json  sample_trkasi.xml
server/data/jvfdtm/xsd/common/: atributy.xsd  common.xsd  doprovodne_informace.xsd  extenze.xsd
server/data/jvfdtm/xsd/index/: index.xsd  index_data.xsd
server/data/jvfdtm/xsd/objects/: bp_plynovodni_site.xsd  bp_zarizeni_PKO.xsd  def_bod_budovy.xsd  def_bod_cela_propustku.xsd  def_bod_chodniku.xsd  def_bod_cyklostezky.xsd  def_bod_deliciho_pasu.xsd  def_bod_dolu_lomu.xsd  def_bod_dopravniho_ostruvku.xsd  def_bod_drobne_kulturni_stavby.xsd  def_bod_drobne_sakralni_stavby.xsd  def_bod_dvoru_nadvori.xsd  def_bod_hospodarsky_nevyuzivane_plochy.xsd  def_bod_hraze_jezu.xsd  def_bod_hrbitova.xsd  def_bod_hriste.xsd  def_bod_jezera.xsd  def_bod_jineho_dulniho_dila_stavby.xsd  def_bod_kominu.xsd  def_bod_lesa.xsd  def_bod_manipulacni_plochy.xsd  def_bod_melioracniho_prikopu_zlabu.xsd  def_bod_mostni_vahy.xsd  def_bod_mostovky.xsd  def_bod_najezdu_sjezdu_vjezdu.xsd  def_bod_nastupiste.xsd  def_bod_ostatni_zastresene_stavby.xsd  def_bod_parkoviste_odstavne_plochy.xsd  def_bod_patky_desky_monolitu_pilire.xsd  def_bod_podezdivky.xsd  def_bod_podzemniho_objektu_ZPS.xsd  def_bod_portalu_podchodu.xsd  def_bod_portalu_tunelu.xsd  def_bod_pozemni_komunikace.xsd  def_bod_prelivu_stupne.xsd  (+400 more)
server/src/: __main__.py  app.py  common.py  convert.py  jvfdtm.py  xmlgen.py
(+15 files in other folders)
