[tool.poetry]
name = "rosetta-server"
version = "0.0.1"
description = "Toolbelt for manipulating various geoinformatic data"
authors = ["hacksparr0w <hacksparr0w@protonmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.92.0"}
lxml = "^4.9.2"
beautifulsoup4 = "^4.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
