[tool.poetry]
name = "rosetta-server"
version = "0.0.1"
description = "Toolbelt for manipulating various geoinformatic data"
authors = ["hacksparr0w <hacksparr0w@protonmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.92.0"}
lxml = "^4.9.2"
beautifulsoup4 = "^4.11.2"
pandas = "^1.5.3"
python-multipart = "^0.0.6"
openpyxl = "^3.1.1"
xmlschema = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
